[package]
name = "wasm-image-to-black-white"
version = "0.1.0"
authors = ["AvraamMavridis <avraammauridis@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.6"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Blob", 
  "Url",
  "HtmlImageElement",
  "ImageData",
  "console"
]
