[package]
name = "wasm-image-to-black-white"
version = "0.2.0"
authors = ["AvraamMavridis <avr.mav@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.6"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Blob", 
  "Url",
  "HtmlImageElement",
  "ImageData",
  "console"
]
