[package]
name = "wasm-image-to-black-white"
version = "0.4.2"
authors = ["AvraamMavridis <avr.mav@gmail.com>"]
edition = "2018"
description = "Convert an image to black&white (various algorithms)"
repository = "https://github.com/AvraamMavridis/wasm-image-to-black-white"
keywords = ["wasm", "image", "black", "white", "bnw", "rust"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.6"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Blob", 
  "Url",
  "HtmlImageElement",
  "ImageData",
  "console"
]
